# rutd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USAGE.md  justfile  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  question.md
.github/workflows/: release.yml  test.yml
.todos/tasks/: .gitkeep
assets/tapes/: add.tape  autocomplete.tape  clone-sync.tape  done-abort.tape  filter.tape  help.tape  start-stop.tape
recipes/: demo.just  release.just
rutd-cli/: Cargo.toml
rutd-cli/src/: lib.rs  main.rs
rutd-cli/src/cli/: commands.rs  complete.rs  display.rs  filter.rs  mod.rs  model.rs  parse.rs
rutd-cli/src/completer/: config.rs  merge_strategy.rs  mod.rs  sort_options.rs  task_attribute.rs  utils.rs
rutd-cli/src/parser/: date_range.rs  mod.rs  sort_options.rs
rutd-core/: Cargo.toml
rutd-core/src/: lib.rs
rutd-core/src/cli/: complete.rs
rutd-core/src/config/: git.rs  logging.rs  manager.rs  mod.rs  path.rs  reflection.rs  task.rs
rutd-core/src/display/: mod.rs
rutd-core/src/git/: mod.rs  repo.rs
rutd-core/src/logging/: mod.rs
rutd-core/src/task/: active_task.rs  filter.rs  manager.rs  mod.rs  model.rs  sort.rs  storage.rs
rutd-tui/: Cargo.toml
rutd-tui/src/: lib.rs  main.rs
src/: cli.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: general.rs  git.rs  logging.rs  mod.rs  path.rs
src/display/: mod.rs
src/git/: mod.rs  repo.rs
src/logging/: mod.rs
src/task/: active_task.rs  mod.rs  model.rs  storage.rs
tests/: mod.rs
