[package]
name = "rutd"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI tool for managing and tracking your daily tasks. Git-friendly and easy to use."
authors = ["Teddy Huang <teddyhuangnan@gmail.com>"]
repository = "https://github.com/TeddyHuang-00/rutd"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "task", "todo", "git", "productivity"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
git2 = "0.20.1"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.41"
strum = { version = "0.27.1", features = ["derive"] }
anyhow = "1.0.98"
simple_logger = "5.0.0"
log = "0.4.27"
shellexpand = "3.1.1"
fuzzy-matcher = "0.3.7"
dialoguer = "0.11.0"
tempfile = "3.19.1"
comfy-table = "7.1.0"
