[workspace]
members = ["rutd-core", "rutd-cli", "rutd-tui"]
resolver = "2"

[package]
name = "rutd"
description = "A Rust CLI tool for managing and tracking your daily tasks. Git-friendly and easy to use."
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "task", "todo", "git", "productivity"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rutd-cli = { path = "rutd-cli", version = "0.4.1-rc.2" }
# rutd-tui = { path = "rutd-tui", version = "0.2.1-rc.3" }

[features]
default = []
vendored = ["rutd-cli/vendored"]

[[bin]]
name = "rutd-cli"
path = "src/cli.rs"

# [[bin]]
# name = "rutd-tui"
# path = "src/bin/tui.rs"

[workspace.package]
version = "0.4.1-rc.2"
edition = "2024"
authors = ["Teddy Huang <teddyhuangnan@gmail.com>"]
repository = "https://github.com/TeddyHuang-00/rutd"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = { version = "4.5.48", features = ["unstable-dynamic"] }
colored = "3.0.0"
comfy-table = "7.1.0"
dialoguer = "0.11.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
fuzzy-matcher = "0.3.7"
git2 = "0.20.1"
log = "0.4.27"
serde = { version = "1.0.195", features = ["derive"] }
shellexpand = "3.1.1"
simple_logger = "5.0.0"
tempfile = "3.19.1"
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4"] }

[lints.clippy]
nursery = "warn"
