[package]
name = "rutd-cli"
description = "Command-line interface for RuTD - A Rust based To-Do list manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rutd-core = { path = "../rutd-core", features = [
    "cli",
], version = "0.2.1-rc.3" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
fuzzy-matcher.workspace = true
log.workspace = true
simple_logger.workspace = true
