[package]
name = "rutd-core"
description = "Core functionality for RuTD - A Rust based To-Do list manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2.workspace = true
log.workspace = true
serde.workspace = true
shellexpand.workspace = true
toml.workspace = true
uuid.workspace = true
figment.workspace = true
simple_logger.workspace = true
fuzzy-matcher.workspace = true
tempfile.workspace = true

[features]
default = []
vendored = ["git2/vendored-openssl", "git2/vendored-libgit2"]
