[package]
name = "rutd-core"
description = "Core functionality for RuTD - A Rust based To-Do list manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
vendored = ["git2/vendored-openssl", "git2/vendored-libgit2"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
figment.workspace = true
fuzzy-matcher.workspace = true
git2.workspace = true
log.workspace = true
serde.workspace = true
shellexpand.workspace = true
simple_logger.workspace = true
strum.workspace = true
tempfile.workspace = true
toml.workspace = true
uuid.workspace = true
